# KnR-Solutions

./: .gitignore
Chapter-1/Exercise_1-14/: CMakeLists.txt
Chapter-1/Exercise_1-16/: CMakeLists.txt  long_text.txt
Chapter-1/Exercise_1-17/: CMakeLists.txt  long_text.txt
Chapter-1/Exercise_1-17/src/: main.c
Chapter-1/Exercise_1-18/: CMakeLists.txt  test.txt
Chapter-1/Exercise_1-19/: CMakeLists.txt
Chapter-1/Exercise_1-20/: CMakeLists.txt  out.txt  test.txt
Chapter-1/Exercise_1-21/: CMakeLists.txt  out.txt
Chapter-1/Exercise_1-22/: CMakeLists.txt  out.txt  test.txt
Chapter-1/Exercise_1-23/: CMakeLists.txt  test.txt
Chapter-1/Exercise_1-24/: CMakeLists.txt  notes.md  test.txt
Chapter-2/Exercise_2-1/: CMakeLists.txt
Chapter-2/Exercise_2-1/src/: main.c
Chapter-2/Exercise_2-2/: CMakeLists.txt  test.txt
Chapter-2/Exercise_2-3/: CMakeLists.txt
Chapter-2/Exercise_2-3/src/: main.c
Chapter-2/Exercise_2-4/: CMakeLists.txt
Chapter-2/Exercise_2-5/: CMakeLists.txt
Chapter-2/Exercise_2-6/: CMakeLists.txt
Chapter-3/Exercise_3-1/: CMakeLists.txt
Chapter-3/Exercise_3-2/: CMakeLists.txt
Chapter-3/Exercise_3-3/: CMakeLists.txt
Chapter-3/Exercise_3-4/: CMakeLists.txt
Chapter-3/Exercise_3-5/: CMakeLists.txt
Chapter-3/Exercise_3-6/: CMakeLists.txt
Chapter-4/Exercise_4-1/: CMakeLists.txt
Chapter-4/Exercise_4-10/: CMakeLists.txt
Chapter-4/Exercise_4-12/: CMakeLists.txt
Chapter-4/Exercise_4-13/: CMakeLists.txt
Chapter-4/Exercise_4-14/: CMakeLists.txt
Chapter-4/Exercise_4-2/: CMakeLists.txt
Chapter-4/Exercise_4-3/: CMakeLists.txt
Chapter-4/Exercise_4-3/include/: calc.h
Chapter-4/Exercise_4-3/src/: getop.c  main.c  stack.c
Chapter-4/Exercise_4-4/: CMakeLists.txt
Chapter-4/Exercise_4-5/: CMakeLists.txt
Chapter-4/Exercise_4-6/: CMakeLists.txt
Chapter-4/Exercise_4-7/: CMakeLists.txt
Chapter-4/Exercise_4-8/: CMakeLists.txt
Chapter-4/Exercise_4-9/: CMakeLists.txt
Chapter-5/Exercise_5-1/: CMakeLists.txt
Chapter-5/Exercise_5-10/: CMakeLists.txt
Chapter-5/Exercise_5-11/: CMakeLists.txt
Chapter-5/Exercise_5-12/: CMakeLists.txt  test.txt
Chapter-5/Exercise_5-13/: CMakeLists.txt  test.txt
Chapter-5/Exercise_5-14/: CMakeLists.txt  test_alph  test_numeric
Chapter-5/Exercise_5-14/src/: main.c
Chapter-5/Exercise_5-15/: CMakeLists.txt  test_alph
(+70 files in other folders)
